tests/sksl/errors/VoidVariable.glsl
### Compilation failed:

error: 4: variables of type 'void' are not allowed
error: 5: variables of type 'void' are not allowed
error: 5: opaque type 'void' cannot use initializer expressions
3 errors
